[package]
name = "loupe-derive"
version = "0.1.0"
description = "Profiling tool for Rust, see the `loupe` crate"
repository = "https://github.com/wasmerio/loupe"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
loupe = { path = "../loupe", version = "0.1.0" }