[package]
name = "loupe"
version = "0.1.3"
description = "Profiling tool for Rust"
repository = "https://github.com/wasmerio/loupe"
license = "MIT"
edition = "2018"

[dependencies]
loupe-derive = { path = "../loupe-derive", version = "0.1.3", optional = true }
indexmap = { version = "2.2", optional = true }
rustversion = "1.0"

[features]
default = ["derive"]
derive = ["loupe-derive"]
enable-indexmap = ["indexmap"]