[package]
name = "loupe"
version = "0.2.0"
description = "Profiling tool for Rust"
repository = "https://github.com/wasmerio/loupe"
license = "MIT"
edition = "2018"

[dependencies]
loupe-derive = { path = "../loupe-derive", version = "0.2.0", optional = true }
indexmap = { version = "2", optional = true }
rustversion = "1.0"

[features]
default = ["derive"]
derive = ["loupe-derive"]
enable-indexmap = ["indexmap"]